Deleted PMD and Firebug plugin